[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/Objects/pause_menu.gd" type="Script" id=1]

[sub_resource type="InputEventAction" id=1]
action = "ui_pause"
pressed = true

[sub_resource type="ShortCut" id=2]
shortcut = SubResource( 1 )

[node name="pause_menu" type="Control"]
script = ExtResource( 1 )

[node name="pause_pop_up" type="Popup" parent="."]
pause_mode = 2
margin_right = 1027.0
margin_bottom = 607.0

[node name="Return" type="Button" parent="pause_pop_up"]
pause_mode = 2
margin_left = 287.0
margin_top = 157.0
margin_right = 666.0
margin_bottom = 256.0
shortcut = SubResource( 2 )
text = "Return"

[node name="Exit" type="Button" parent="pause_pop_up"]
pause_mode = 2
margin_left = 296.0
margin_top = 302.0
margin_right = 669.0
margin_bottom = 401.0
text = "Exit"

[connection signal="pressed" from="pause_pop_up/Return" to="." method="_on_Return_pressed"]
[connection signal="pressed" from="pause_pop_up/Exit" to="." method="_on_Exit_pressed"]
